# elibrary

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/source/: main.c
example/: books.csv  borrows.csv  users.csv
module/: CMakeLists.txt
module/book/: CMakeLists.txt
module/book/include/: book.h
module/book/source/: book.c
module/borrow/: CMakeLists.txt
module/borrow/include/: borrow.h
module/borrow/source/: borrow.c
module/function/: CMakeLists.txt
module/function/include/: comparators.h
module/function/source/: comparators.c
module/list/: CMakeLists.txt
module/list/include/: list.h
module/list/source/: list.c
module/serializer/: CMakeLists.txt
module/serializer/include/: serializer.h
module/serializer/source/: serializer.c
module/user/: CMakeLists.txt
module/user/include/: user.h
module/user/source/: user.c
test/integration/: book_list_itest.c  borrow_list_itest.c  user_list_itest.c
test/unit/: book_utest.c  borrow_utest.c  list_utest.c  user_utest.c
utils/: CMakeLists.txt
utils/include/: common.h  logger.h  strman.h
utils/source/: common.c  strman.c
view/: CMakeLists.txt
view/interface/: CMakeLists.txt
view/interface/include/: interface.h
view/interface/source/: interface.c
view/menu/: CMakeLists.txt
view/menu/include/: books_menu.h  borrows_menu.h  reports_menu.h  users_menu.h
view/menu/source/: books_menu.c  borrows_menu.c  reports_menu.c  users_menu.c
