# Copyright (c) 2024 eLib
# All rights reserved

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/book)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/borrow)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/function)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/list)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/serializer)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/user)
